Fixed an issue with the search bar being far too large

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -422,26 +422,6 @@ select option[value=""] {
     .text-primary {
         color: #ffc107!important;
     }
-
-    input[type=text], input[type=email], textarea {
-        padding: 20%;
-        margin: 8px 0;
-        display: inline-block;
-    }
-
-    .form-control {
-        display: block;
-        width: 100%;
-        padding: 50%;
-        font-size: 1rem;
-        font-weight: 400;
-        line-height: 1.5;
-        color: #495057;
-        background-color: #fff;
-        background-clip: padding-box;
-        border: 1px solid #ced4da;
-        border-radius: 0.25rem;
-        transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 /* fixed top navbar only on medium and up */
